# studyflow

./: package-lock.json
backend/: app.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 76dd95cd606f_create_user_passwordreset_model.py
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/exceptions/: auth.py  base.py  security.py  user.py
backend/app/middlewares/: security.py  utils.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/repositories/: auth.py  user.py
backend/app/routers/: auth.py  users.py
backend/app/schema/: auth.py  base.py  user.py
backend/app/services/: auth.py  email.py  user.py
backend/app/utils/: security.py
frontend/: .page.js.bak  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  page.js
frontend/src/components/: ClientLayout.module.css  CommunityCard.js  CommunityCard.module.css  CommunityContext.js  CommunityStories.js  CreateCommunityModal.js  CreateCommunityModal.module.css  FadeIn.js  GenerationOverlay.js  IntegratedSearchBar.module.css  MobileHeader.module.css  PostCard.module.css  ThemeToggle.js  (+3 more)
src/app/: globals.css  layout.js  page.js  page.module.css
src/components/: Card.js  Card.module.css  ClientLayout.js  CommunityStories.module.css  CreatePost.js  CreatePost.module.css  CustomDropdown.js  GamificationStats.js  GamificationStats.module.css  GenerationOverlay.module.css  Icons.js  IntegratedSearchBar.js  MobileHeader.js  PostCard.js  Sidebar.js  Sidebar.module.css  ThemeProvider.js  TopBar.module.css
(+11 files in other folders)
